--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <title>Learning Flashcards</title>
   </head>
   <body>
-    <h1>Your learning flashcards</h1>
+    <h1>Your Learning Flashcards</h1>
     <div>
       <button id="show" class="btn btn-small">
         <i class="fas fa-plus"></i> Add New Card
       </button>
       <button id="clear" class="clear btn">
-        <i class="fas fa-trash"></i> Clear All Cards
+        <i class="fas fa-trash"></i> Delete All Cards
       </button>
     </div>
 
@@ -47,17 +47,17 @@
       </h1>
 
       <div class="form-group">
-        <label for="question">Question</label>
-        <textarea id="question" placeholder="Enter word..."></textarea>
+        <label for="word">New word/ term:</label>
+        <textarea id="word" placeholder="Enter word..."></textarea>
       </div>
 
       <div class="form-group">
-        <label for="answer">Answer</label>
-        <textarea id="answer" placeholder="Enter definition..."></textarea>
+        <label for="definition">Definition:</label>
+        <textarea id="definition" placeholder="Enter definition..."></textarea>
       </div>
 
       <button id="add-card" class="btn">
-        <i class="fas fa-plus"></i> Add Card
+        <i class="fas fa-plus"></i> Add This Card
       </button>
     </div>
 
